# substreams-websocket

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  index.html  streams.example.toml  streams.example.yaml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/substreams-websocket/: Cargo.toml  SKILL.md  build.rs  index.html
crates/substreams-websocket-cli/: Cargo.toml
crates/substreams-websocket-cli/src/: main.rs
crates/substreams-websocket/proto/dex/swaps/v1/: dex-swaps.proto
crates/substreams-websocket/proto/sf/substreams/rpc/v2/: service.proto
crates/substreams-websocket/proto/sf/substreams/rpc/v3/: service.proto
crates/substreams-websocket/proto/sf/substreams/sink/database/v1/: database.proto
crates/substreams-websocket/proto/sf/substreams/v1/: deltas.proto  modules.proto
crates/substreams-websocket/proto/solana/spl/token/v1/: spl-token.proto
crates/substreams-websocket/src/: config.rs  cursor.rs  decoder.rs  lib.rs  module_hash.rs  server.rs  substreams.rs
docs/: README.md  auth.md  backpressure.md  binance-websocket.md  cursors-and-resume.md  decisions.md  envoy.md  filters.md  graceful-shutdown.md  latency-benchmarks.md  metrics.md  polygon-latency.md  railway.md  replay.md  sample.db_out.json  substreams.md
proto/sf/substreams/v1/: clock.proto  package.proto
public/: SKILL.md  index.html  llms.txt
scripts/: polygon-latency.py  rpc-compare.py  ws-bench-streams.yaml  ws-latency.js
skills/: SKILL.md
skills/substreams-websocket/: SKILL.md
src/: config.rs  cursor.rs  decoder.rs  event_filter.rs  lib.rs  main.rs  metrics.rs  replay.rs  server.rs  substreams.rs
