[package]
name = "substreams-websocket"
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/pinax-network/substreams-websocket"
rust-version = "1.90"

[lib]
name = "substreams_websocket"
path = "src/lib.rs"

[[bin]]
name = "substreams-websocket"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
bs58 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tonic = { version = "0.14", features = ["tls-native-roots", "tls-webpki-roots", "gzip", "zstd"] }
tonic-prost = "0.14"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.29"
