[package]
name = "substreams-websocket-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "substreams-websocket"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
substreams-websocket.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
